--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -54,26 +54,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(100000, 20)\n"
+      "(100000, 22)\n"
      ]
     }
    ],
    "source": [
     "# Restructure data\n",
-    "df=pd.read_csv('./static/data.csv')\n",
+    "df=pd.read_csv('data.csv')\n",
     "print(df.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -720,7 +720,7 @@
        "[20 rows x 22 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -761,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -772,7 +772,7 @@
        "       'Country Middles'], dtype=object)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -783,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -822,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -833,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -863,7 +863,7 @@
        " 'path']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -874,16 +874,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "48980955"
+       "51580981"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -916,7 +916,9 @@
     " 'state',\n",
     " 'travel_spending',\n",
     " 'youtube_user_rank',\n",
-    " 'gender_dum')\n",
+    " 'gender_dum',\n",
+    " 'economic_stability_class',\n",
+    " 'path')\n",
     "reader = csv.DictReader( csvfile, fieldnames)\n",
     "out = json.dumps( [ row for row in reader ] )\n",
     "jsonfile.write(out)"
