--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,7 @@
        "      <td>19</td>\n",
        "      <td>0</td>\n",
        "      <td>High</td>\n",
-       "      <td>2.jpg</td>\n",
+       "      <td>6.jpg</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -214,7 +214,7 @@
        "      <td>14</td>\n",
        "      <td>0</td>\n",
        "      <td>Low</td>\n",
-       "      <td>2.jpg</td>\n",
+       "      <td>6.jpg</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -238,7 +238,7 @@
        "      <td>14</td>\n",
        "      <td>1</td>\n",
        "      <td>Low</td>\n",
-       "      <td>2.jpg</td>\n",
+       "      <td>6.jpg</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -262,7 +262,7 @@
        "      <td>12</td>\n",
        "      <td>1</td>\n",
        "      <td>Low</td>\n",
-       "      <td>3.jpg</td>\n",
+       "      <td>2.jpg</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -286,7 +286,7 @@
        "      <td>9</td>\n",
        "      <td>1</td>\n",
        "      <td>Low</td>\n",
-       "      <td>3.jpg</td>\n",
+       "      <td>2.jpg</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -310,7 +310,7 @@
        "      <td>12</td>\n",
        "      <td>1</td>\n",
        "      <td>High</td>\n",
-       "      <td>4.jpg</td>\n",
+       "      <td>7.jpg</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
@@ -334,7 +334,7 @@
        "      <td>16</td>\n",
        "      <td>1</td>\n",
        "      <td>High</td>\n",
-       "      <td>2.jpg</td>\n",
+       "      <td>6.jpg</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
@@ -358,7 +358,7 @@
        "      <td>11</td>\n",
        "      <td>0</td>\n",
        "      <td>Medium</td>\n",
-       "      <td>5.jpg</td>\n",
+       "      <td>4.jpg</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
@@ -382,7 +382,7 @@
        "      <td>5</td>\n",
        "      <td>0</td>\n",
        "      <td>Medium</td>\n",
-       "      <td>6.jpg</td>\n",
+       "      <td>8.jpg</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
@@ -406,7 +406,7 @@
        "      <td>13</td>\n",
        "      <td>0</td>\n",
        "      <td>Medium</td>\n",
-       "      <td>4.jpg</td>\n",
+       "      <td>7.jpg</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
@@ -502,7 +502,7 @@
        "      <td>14</td>\n",
        "      <td>0</td>\n",
        "      <td>High</td>\n",
-       "      <td>2.jpg</td>\n",
+       "      <td>6.jpg</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
@@ -526,7 +526,7 @@
        "      <td>16</td>\n",
        "      <td>1</td>\n",
        "      <td>Medium</td>\n",
-       "      <td>4.jpg</td>\n",
+       "      <td>7.jpg</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
@@ -574,7 +574,7 @@
        "      <td>11</td>\n",
        "      <td>1</td>\n",
        "      <td>Medium</td>\n",
-       "      <td>2.jpg</td>\n",
+       "      <td>6.jpg</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
@@ -598,7 +598,7 @@
        "      <td>4</td>\n",
        "      <td>1</td>\n",
        "      <td>Low</td>\n",
-       "      <td>6.jpg</td>\n",
+       "      <td>8.jpg</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -696,74 +696,74 @@
        "\n",
        "    gender_dum  economic_stability_class   path  \n",
        "0            0                       Low  1.jpg  \n",
-       "1            0                      High  2.jpg  \n",
+       "1            0                      High  6.jpg  \n",
        "2            0                    Medium  1.jpg  \n",
-       "3            0                       Low  2.jpg  \n",
-       "4            1                       Low  2.jpg  \n",
-       "5            1                       Low  3.jpg  \n",
-       "6            1                       Low  3.jpg  \n",
-       "7            1                      High  4.jpg  \n",
-       "8            1                      High  2.jpg  \n",
-       "9            0                    Medium  5.jpg  \n",
-       "10           0                    Medium  6.jpg  \n",
-       "11           0                    Medium  4.jpg  \n",
+       "3            0                       Low  6.jpg  \n",
+       "4            1                       Low  6.jpg  \n",
+       "5            1                       Low  2.jpg  \n",
+       "6            1                       Low  2.jpg  \n",
+       "7            1                      High  7.jpg  \n",
+       "8            1                      High  6.jpg  \n",
+       "9            0                    Medium  4.jpg  \n",
+       "10           0                    Medium  8.jpg  \n",
+       "11           0                    Medium  7.jpg  \n",
        "12           0                    Medium  1.jpg  \n",
        "13           0                    Medium  1.jpg  \n",
        "14           0                    Medium  1.jpg  \n",
-       "15           0                      High  2.jpg  \n",
-       "16           1                    Medium  4.jpg  \n",
+       "15           0                      High  6.jpg  \n",
+       "16           1                    Medium  7.jpg  \n",
        "17           0                       Low  1.jpg  \n",
-       "18           1                    Medium  2.jpg  \n",
-       "19           1                       Low  6.jpg  \n",
+       "18           1                    Medium  6.jpg  \n",
+       "19           1                       Low  8.jpg  \n",
        "\n",
        "[20 rows x 22 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Recode gender\n",
-    "df['gender_dum']= np.where(df['gender']==\"F\", 1, 0)\n",
-    "Reformat education_id\n",
-    "df['education_id'].replace(\"null\", 0,inplace=True)\n",
-    "df['education_id']= df['education_id'].astype(int)\n",
+    "# # Recode gender\n",
+    "# df['gender_dum']= np.where(df['gender']==\"F\", 1, 0)\n",
+    "# Reformat education_id\n",
+    "# df['education_id'].replace(\"null\", 0,inplace=True)\n",
+    "# df['education_id']= df['education_id'].astype(int)\n",
     "\n",
-    "# Recode race_code\n",
-    "df.loc[df['race_code']== \"W\", 'race_code'] = 1\n",
-    "df.loc[df['race_code']== \"B\", 'race_code'] = 2\n",
-    "df.loc[df['race_code']== \"O\", 'race_code'] = 3\n",
-    "df.loc[df['race_code']== \"I\", 'race_code'] = 4\n",
-    "df.loc[df['race_code']== \"H\", 'race_code'] = 5\n",
-    "df.loc[df['race_code']== \"N\", 'race_code'] = 6\n",
-    "df.loc[df['race_code']== \"P\", 'race_code'] = 7\n",
-    "df.loc[df['race_code']== \"A\", 'race_code'] = 8\n",
-    "df.loc[df['race_code']== \"C\", 'race_code'] = 9\n",
-    "df['race_code']= df['race_code'].astype(int)\n",
+    "# # Recode race_code\n",
+    "# df.loc[df['race_code']== \"W\", 'race_code'] = 1\n",
+    "# df.loc[df['race_code']== \"B\", 'race_code'] = 2\n",
+    "# df.loc[df['race_code']== \"O\", 'race_code'] = 3\n",
+    "# df.loc[df['race_code']== \"I\", 'race_code'] = 4\n",
+    "# df.loc[df['race_code']== \"H\", 'race_code'] = 5\n",
+    "# df.loc[df['race_code']== \"N\", 'race_code'] = 6\n",
+    "# df.loc[df['race_code']== \"P\", 'race_code'] = 7\n",
+    "# df.loc[df['race_code']== \"A\", 'race_code'] = 8\n",
+    "# df.loc[df['race_code']== \"C\", 'race_code'] = 9\n",
+    "# df['race_code']= df['race_code'].astype(int)\n",
     "\n",
-    "# Reclass economic_stability\n",
-    "df.loc[df['economic_stability']<10, 'economic_stability_class'] = \"High\"\n",
-    "df.loc[(df['economic_stability']>=10) & (df['economic_stability']<20), 'economic_stability_class'] = \"Medium\"\n",
-    "df.loc[df['economic_stability']>=20, 'economic_stability_class'] = \"Low\"\n",
+    "# # Reclass economic_stability\n",
+    "# df.loc[df['economic_stability']<10, 'economic_stability_class'] = \"High\"\n",
+    "# df.loc[(df['economic_stability']>=10) & (df['economic_stability']<20), 'economic_stability_class'] = \"Medium\"\n",
+    "# df.loc[df['economic_stability']>=20, 'economic_stability_class'] = \"Low\"\n",
     "\n",
     "# Create image path\n",
-    "df.loc[df['insurance_segment']==\"Price Isn't Primary\", 'path'] = \"1.jpg\"\n",
-    "df.loc[df['insurance_segment']==\"Solid Suburbans\", 'path'] = \"2.jpg\"\n",
-    "df.loc[df['insurance_segment']==\"Stretched Singles\", 'path'] = \"3.jpg\"\n",
-    "df.loc[df['insurance_segment']==\"Full House\", 'path'] = \"4.jpg\"\n",
-    "df.loc[df['insurance_segment']==\"The Nest is Empty\", 'path'] = \"5.jpg\"\n",
-    "df.loc[df['insurance_segment']==\"Getting By\", 'path'] = \"6.jpg\"\n",
-    "df.loc[df['insurance_segment']==\"Hands Full\", 'path'] = \"7.jpg\"\n",
-    "df.loc[df['insurance_segment']==\"Country Middles\", 'path'] = \"8.jpg\"\n",
+    "df.loc[df['insurance_segment_id']==1, 'path'] = \"1.jpg\"\n",
+    "df.loc[df['insurance_segment_id']==2, 'path'] = \"2.jpg\"\n",
+    "df.loc[df['insurance_segment_id']==3, 'path'] = \"3.jpg\"\n",
+    "df.loc[df['insurance_segment_id']==4, 'path'] = \"4.jpg\"\n",
+    "df.loc[df['insurance_segment_id']==5, 'path'] = \"5.jpg\"\n",
+    "df.loc[df['insurance_segment_id']==6, 'path'] = \"6.jpg\"\n",
+    "df.loc[df['insurance_segment_id']==7, 'path'] = \"7.jpg\"\n",
+    "df.loc[df['insurance_segment_id']==8, 'path'] = \"8.jpg\"\n",
     "\n",
     "df.head(20)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -774,7 +774,7 @@
        "       'Country Middles'], dtype=object)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -785,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
