--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -37,18 +37,6 @@
     "\n",
     "print(r.status_code)\n",
     "data_json= r.json()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# Initial json\n",
-    "pd.DataFrame(data_json).to_json('data.json')"
    ]
   },
   {
@@ -726,27 +714,27 @@
    ],
    "source": [
     "# # Recode gender\n",
-    "# df['gender_dum']= np.where(df['gender']==\"F\", 1, 0)\n",
-    "# Reformat education_id\n",
-    "# df['education_id'].replace(\"null\", 0,inplace=True)\n",
-    "# df['education_id']= df['education_id'].astype(int)\n",
+    "df['gender_dum']= np.where(df['gender']==\"F\", 1, 0)\n",
+    "Reformat education_id\n",
+    "df['education_id'].replace(\"null\", 0,inplace=True)\n",
+    "df['education_id']= df['education_id'].astype(int)\n",
     "\n",
     "# # Recode race_code\n",
-    "# df.loc[df['race_code']== \"W\", 'race_code'] = 1\n",
-    "# df.loc[df['race_code']== \"B\", 'race_code'] = 2\n",
-    "# df.loc[df['race_code']== \"O\", 'race_code'] = 3\n",
-    "# df.loc[df['race_code']== \"I\", 'race_code'] = 4\n",
-    "# df.loc[df['race_code']== \"H\", 'race_code'] = 5\n",
-    "# df.loc[df['race_code']== \"N\", 'race_code'] = 6\n",
-    "# df.loc[df['race_code']== \"P\", 'race_code'] = 7\n",
-    "# df.loc[df['race_code']== \"A\", 'race_code'] = 8\n",
-    "# df.loc[df['race_code']== \"C\", 'race_code'] = 9\n",
-    "# df['race_code']= df['race_code'].astype(int)\n",
+    "df.loc[df['race_code']== \"W\", 'race_code'] = 1\n",
+    "df.loc[df['race_code']== \"B\", 'race_code'] = 2\n",
+    "df.loc[df['race_code']== \"O\", 'race_code'] = 3\n",
+    "df.loc[df['race_code']== \"I\", 'race_code'] = 4\n",
+    "df.loc[df['race_code']== \"H\", 'race_code'] = 5\n",
+    "df.loc[df['race_code']== \"N\", 'race_code'] = 6\n",
+    "df.loc[df['race_code']== \"P\", 'race_code'] = 7\n",
+    "df.loc[df['race_code']== \"A\", 'race_code'] = 8\n",
+    "df.loc[df['race_code']== \"C\", 'race_code'] = 9\n",
+    "df['race_code']= df['race_code'].astype(int)\n",
     "\n",
     "# # Reclass economic_stability\n",
-    "# df.loc[df['economic_stability']<10, 'economic_stability_class'] = \"High\"\n",
-    "# df.loc[(df['economic_stability']>=10) & (df['economic_stability']<20), 'economic_stability_class'] = \"Medium\"\n",
-    "# df.loc[df['economic_stability']>=20, 'economic_stability_class'] = \"Low\"\n",
+    "df.loc[df['economic_stability']<10, 'economic_stability_class'] = \"High\"\n",
+    "df.loc[(df['economic_stability']>=10) & (df['economic_stability']<20), 'economic_stability_class'] = \"Medium\"\n",
+    "df.loc[df['economic_stability']>=20, 'economic_stability_class'] = \"Low\"\n",
     "\n",
     "# Create image path\n",
     "df.loc[df['insurance_segment_id']==1, 'path'] = \"1.jpg\"\n",
